# MultiCopyPaste

./: README.en.md  README.md  index.html  package-lock.json  package.json
.agents/: AGENTS.md
.github/workflows/: build-and-release.yml
docs/: PRODUCT_SPEC.md  TASKS.md  codex-tool-output-review.md
scripts/: macos-dev-install.sh
src/: App.tsx  QuickPanel.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  lib.rs  models.rs  state.rs
src/components/: SettingSlider.tsx
src/locales/: en.ts  index.ts  zh.ts
