[package]
name = "app"
version = "0.0.4"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
arboard = "3.6.1"
chrono = { version = "0.4.45", features = ["serde"] }
parking_lot = "0.12.5"
tauri-plugin-global-shortcut = "2.3.2"
enigo = "0.3.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24.0"

